# self-improving-factory

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
_bmad-output/: discovery-catalog-project-setup-legacy.md  prd-self-improving-factory-incremental.md  project-state-self-improving-factory.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
db/: __init__.py  migrate.py
db/migrations/: 0001_initial_schema.py  0002_seed_initial_data.py  0003_prompt_segments.py
docs/: enhancing-agent-initiative-and-autonomy-research.md
sif/: __init__.py  bmad_installer.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_provisioning_smoke.py
tests/unit/: test_bmad_installer.py
